completed Contact HTML, some updates to Home and Blog HTML

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,4 +1,4 @@
-header {
+.headerHome {
     background-image: url(../assets/header-home.jpg);
     background-position: center;
     background-repeat: no-repeat;
