--- a/styles/style.css
+++ b/styles/style.css
@@ -226,11 +226,11 @@ html {
   overflow: hidden;
 }
 
-header {
+.headerHome {
   background-image: url(../assets/header-home.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 100vh;
 }
 
 footer {
