--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,11 @@
 @import './partials/setup';
+@import url('https://fonts.googleapis.com/css2?family=Kumar+One&family=Kumar+One+Outline&family=Lato:wght@400;700&display=swap');
+@import './partials/variables';
+@import './partials/typography';
+@import './partials/baseStyles';
+@import './partials/nav';
 @import './partials/header';
+@import './partials/sections';
+@import './partials/forms';
 @import './partials/footer';
+@import './partials/mediaQueries';
