--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,6 +1,51 @@
+header {
+    margin-bottom: 25px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+// Home Page Header
+
 .headerHome {
     background-image: url(../assets/header-home.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
+    width: 100%;
     height: 100vh;
 }
+
+.headerHome h1 {
+    width: 200px;
+    margin-top: 250px;
+}
+
+.headerHomeImg2 {
+    width: 100%;
+    padding: 50px 0 0 0;
+
+    img {
+        width: 50%;
+        border: 2px solid blue;
+    }
+}
+
+
+// Blog Page Header
+.headerBlog {
+    background-image: url(../assets/blog-image.jpg);
+    height: 60vh;
+    
+    h1 {
+        margin-top: 200px;
+    }
+}
+
+
+
+// Contact Page Header
+.headerContact {
+    background-image: url(../assets/contact-image.jpg);
+    height: 100vh;
+    max-width: 90%;
+}
+
