--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,31 +1,26 @@
-header {
-    margin-bottom: 25px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-
 // Home Page Header
-
 .headerHome {
     background-image: url(../assets/header-home.jpg);
+    background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
+    background-size: cover;
+    background-position: center;
+    // position:relative;
+    
+    h1 {
+        width: 200px;
+        margin: 5vh 0 5vh 0;
+    }
 }
 
-.headerHome h1 {
-    width: 200px;
-    margin-top: 250px;
-}
 
 .headerHomeImg2 {
+    // position: absolute;
     width: 100%;
-    padding: 50px 0 0 0;
-
+    height: auto;
     img {
-        width: 50%;
-        border: 2px solid blue;
+        width: 55%;
     }
 }
 
@@ -33,10 +28,14 @@ header {
 // Blog Page Header
 .headerBlog {
     background-image: url(../assets/blog-image.jpg);
-    height: 60vh;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
     
     h1 {
-        margin-top: 200px;
+        margin-top: 18vh;
     }
 }
 
@@ -45,7 +44,14 @@ header {
 // Contact Page Header
 .headerContact {
     background-image: url(../assets/contact-image.jpg);
-    height: 100vh;
-    max-width: 90%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
+
+    h1 {
+        margin-top: 18vh;
+    }
 }
 
