--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -14,6 +14,33 @@ button {
     }
 }
 
+form {
+    width: 100%;
+    border: 2px solid red;
+    margin-bottom: 75px;
+    .formFlex {
+        padding-bottom: 20px;
+    }
+    input,
+    textarea {
+        background-color: $tertiary;
+        border: 1px solid $secondary;
+        box-sizing: border-box;
+        padding: 20px 0 20px 20px;
+    }
+    input {
+        width: calc(50% - 50px);
+        border: none;
+        border-bottom: 1px solid $secondary;
+        margin: 0 20px 5px 0;
+
+    }
+    textarea {
+        resize: none;
+        width: 100%;
+    }
+}
+
 // Image Drop-Shadows
 .shadowLeft {
     box-shadow: -20px 20px $primary;
