--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -65,7 +65,9 @@ p {
         font-style: italic;
     }
     &.dateAllCaps {
+        color: red;
         text-transform: uppercase;
+        font-weight: 700;
     }
 
 }
