--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -6,12 +6,18 @@
     span {
         visibility: hidden;
     }
-    h4 {
-        padding-top: 7px;
-    }
     ul {
         width: 25rem;
         display: flex;
         justify-content: space-between;
+    }
+    a {
+        border-bottom: 4px solid transparent;
+        transition: 0.3s;
+        &:hover,
+        &:focus {
+        border-bottom: 4px solid $primary;
+        cursor: pointer;
+    }
     }
 }
