--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -104,6 +104,7 @@ body {
         }
         img {
             margin-top: -50px;
+            width: 100%;
         }
     }    
     .groupPrograms {
@@ -117,9 +118,12 @@ body {
             position: absolute;
             left: 0;
             bottom: -30px;
+            width: 100%;
         }
     }
 }
+
+
 
 
 // Section: Home > Banner Image
@@ -128,15 +132,15 @@ body {
 }
 
 
+
+
 // Section: Home > Search
 .search {
     background-color: $white;
     text-align: center;
+    padding: 150px 0;
     h3 {
-        padding: 150px 0 10px;
-    }
-    button {
-        margin-bottom: 150px;
+        padding-left: 10px;
     }
     p {
         padding: 0 75px;
@@ -153,7 +157,6 @@ body {
     display: flex;
     justify-content: space-between;
     .blogImgRelative {
-        // height: 550px;
         width: 100%;
         position: relative;
     }
@@ -164,8 +167,6 @@ body {
         border-bottom: 5px solid $primary;
         img {
             width: calc(100% - 20px);
-            // position: absolute;
-            // top: -150px;
             margin-top: -15%;
         }
         .blogText {
@@ -177,6 +178,7 @@ body {
     }
     aside {
         width: 20%;
+        min-width: 225px;
         height: 75%;
         margin-top: 150px;
         background-color: $primary;
